Fix body z-index

--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -9,12 +9,13 @@
 body {
     font-family: $main-font;
     background-color: $dark-cyan;
-    z-index: -2;
+    position: relative;
+    z-index: -100;
 }
 .site-wrapper {
     width: 100%;
     height: 100vh;
     overflow: hidden;
     position: relative;
-    z-index: -3;
+    // z-index: -200;
 }
