--- a/scss/layout/_background.scss
+++ b/scss/layout/_background.scss
@@ -33,6 +33,7 @@
     bottom: 10%;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 100;
     a {
         color: hsl(228, 45%, 44%);
      }
